fixed favicon and footer alignment

--- a/src/app.scss
+++ b/src/app.scss
@@ -771,7 +771,6 @@ section{
 }
 
 .footer {
-  width: 100%;
   text-align: center;
   margin: 40px 0;
   a {
